--- a/frontend/src/pages/RoomSelect.css
+++ b/frontend/src/pages/RoomSelect.css
@@ -8,18 +8,18 @@ div.header {
     align-items: center;
 }
 
-h1.title {
+.header h1.title {
     margin-left: 10px;
     font-size: 35px;
     font-weight: 400;
 }
 
-img.logo {
+.header img.logo {
     max-width: 70px;
     max-height: 70px;
 }
 
-img.profile {
+.header img.profile {
     margin-left: auto;
     margin-right: 1vw;
     max-width: 40px;
@@ -27,27 +27,27 @@ img.profile {
 }
 
 @media(max-width: 950px) {
-    h1.title {
+    .header h1.title {
         font-size: 30px;
     }
 
-    img.logo {
+    .header img.logo {
         max-width: 55px;
         max-height: 55px;
     }
 }
 
 @media(max-width: 550px) {
-    h1.title {
+    .header h1.title {
         font-size: 25px;
     }
 
-    img.logo {
+    .header img.logo {
         max-width: 45px;
         max-height: 45px;
     }
 
-    img.profile {
+    .header img.profile {
         max-width: 35px;
         max-height: 35px;
     }
