--- a/frontend/src/pages/RoomSelect.css
+++ b/frontend/src/pages/RoomSelect.css
@@ -26,6 +26,71 @@ div.header {
     max-height: 40px;
 }
 
+/*
+Styling for Room FORM
+*/
+form.roomCode {
+    position: relative;
+    top: 150px;
+    text-align: center;
+    width: 100%;
+}
+
+form.roomCode h1 {
+    font-size: 40px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 2.5vh;
+}
+
+form.roomCode hr {
+    width: 9vw;
+    border-style: none;
+    height: 4px;
+    background-color: #eeeeee;
+    border-radius: 25px;
+    margin-bottom: 3vh;
+}
+
+form.roomCode input {
+    font-size: 20px;
+    font-weight: 600;
+    padding-left: 40px;
+    color: #232931;
+
+    border-radius: 50px;
+    width: 350px;
+    height: 40px;
+}
+
+form.roomCode ::placeholder {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+form.roomCode input:focus {
+    outline: none;
+}
+
+form.roomCode div img.hashtag {
+    position: relative;
+    opacity: 40%;
+    top: 7px;
+    left: 35px;
+    max-width: 25px;
+}
+
+form.roomCode div img.btn {
+    position: relative;
+    top: 11px;
+    right: 40px;
+    max-width: 35px;
+}
+
+form.roomCode div img.btn:hover {
+    cursor: pointer;
+}
+
 @media(max-width: 950px) {
     .header h1.title {
         font-size: 30px;
@@ -35,6 +100,16 @@ div.header {
         max-width: 55px;
         max-height: 55px;
     }
+
+    form.roomCode input {
+        width: 300px;
+        font-size: 18px;
+    }
+
+    form.roomCode h1 {
+        font-size: 37px;
+    }
+
 }
 
 @media(max-width: 550px) {
@@ -51,70 +126,13 @@ div.header {
         max-width: 35px;
         max-height: 35px;
     }
-}
 
-/*
-Styling for Room FORM
-*/
-form {
-    position: absolute;
-    top: 40%;
-    text-align: center;
-    width: 100%;
-    align-items: center;
-}
+    form.roomCode input {
+        width: 250px;
+        font-size: 18px;
+    }
 
-form h1 {
-    font-size: 40px;
-    font-weight: 400;
-    margin-top: 0;
-    margin-bottom: 2.5vh;
-}
-
-form hr {
-    width: 8%;
-    border-style: none;
-    height: 4px;
-    background-color: #eeeeee;
-    border-radius: 25px;
-    margin-bottom: 3vh;
-}
-
-form input {
-    font-size: 20px;
-    font-weight: 600;
-    padding-left: 40px;
-    color: #232931;
-
-    border-radius: 50px;
-    width: 350px;
-    height: 40px;
-}
-
-form ::placeholder {
-    font-size: 18px;
-    font-weight: 600;
-}
-
-form input:focus {
-    outline: none;
-}
-
-form div img.hashtag {
-    position: relative;
-    opacity: 40%;
-    top: 7px;
-    left: 35px;
-    max-width: 25px;
-}
-
-form div img.btn {
-    position: relative;
-    top: 11px;
-    right: 40px;
-    max-width: 35px;
-}
-
-form div img.btn:hover {
-    cursor: pointer;
+    form.roomCode h1 {
+        font-size: 34px;
+    }
 }
