--- a/frontend/src/pages/RoomSelect.css
+++ b/frontend/src/pages/RoomSelect.css
@@ -1,25 +1,21 @@
-div.wrapper {
-    height: 100%;
-}
-
-div.header {
+header {
     width: 100%;
     display: flex;
     align-items: center;
 }
 
-.header h1.title {
+header h1.title {
     margin-left: 10px;
     font-size: 35px;
     font-weight: 400;
 }
 
-.header img.logo {
+header img.logo {
     max-width: 70px;
     max-height: 70px;
 }
 
-.header img.profile {
+header img.profile {
     margin-left: auto;
     margin-right: 1vw;
     max-width: 40px;
@@ -66,10 +62,6 @@ form.roomCode input {
 form.roomCode ::placeholder {
     font-size: 18px;
     font-weight: 600;
-}
-
-form.roomCode input:focus {
-    outline: none;
 }
 
 form.roomCode div img.hashtag {
