--- a/frontend/src/pages/Room.css
+++ b/frontend/src/pages/Room.css
@@ -1,7 +1,3 @@
-div.header {
-    margin-top: 30px;
-}
-
 div.roomInfo {
     margin-left: auto;
     margin-right: 0;
@@ -28,6 +24,10 @@ div.roomInfo .name {
     div.roomInfo .name {
         font-size: 20px;
     }
+
+    header {
+        margin-top: 20px;
+    }
 }
 
 @media (max-width: 550px) {
@@ -37,6 +37,10 @@ div.roomInfo .name {
 
     div.roomInfo .name {
         font-size: 15px;
+    }
+
+    header {
+        margin-top: 15px;
     }
 }
 
