--- a/frontend/src/pages/css/LoginPage.css
+++ b/frontend/src/pages/css/LoginPage.css
@@ -3,5 +3,9 @@
 }
 
 .login-section {
-    height:75%;
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
