--- a/frontend/src/components/css/Login.css
+++ b/frontend/src/components/css/Login.css
@@ -50,6 +50,7 @@
     background-color: #219897;
     border-style: none;
     border-radius: 15px;
+    transition: background-color 0.2s ease-in;
 }
 
 .login-form-btn:hover {
@@ -72,6 +73,7 @@
 .have-an-account a {
     color: #219897;
     text-decoration: none;
+    transition: color 0.2s ease-in;
 }
 
 .have-an-account a:hover {
