--- a/frontend/src/components/css/AuthForm.css
+++ b/frontend/src/components/css/AuthForm.css
@@ -40,7 +40,7 @@
     border-style: none;
 }
 
-.auth-form-btn {
+.form-btn {
     margin: 5px 35px;
     height: 30px;
 
@@ -53,7 +53,7 @@
     transition: background-color 0.2s ease-in;
 }
 
-.auth-form-btn:hover {
+.form-btn:hover {
     background-color: #176d6c;
 }
 
