--- a/frontend/src/components/css/AskQuestion.css
+++ b/frontend/src/components/css/AskQuestion.css
@@ -2,6 +2,7 @@
     margin-top: 5vw;
     display: block;
     text-align: center;
+    margin-bottom: 30px;
 }
 
 .askform {
@@ -88,8 +89,9 @@ form.askform img {
 }
 
 @media (max-width: 400px) {
-    div.ask-div {
+    .ask-div {
         margin-top: 50px;
+        margin-bottom: 20px;
     }
 
     form.askform {
